# UCE

./: .gitignore  eval_single_anndata.py  pyproject.toml  requirements.txt
uce/: __init__.py  eval_data.py  evaluate.py  model.py
uce/data_proc/: data_utils.py  download_proc_czi_cxg.py  gene_embeddings.py  generate_reduced_chrom_files.py  preproc_many_dataset.py
